--- a/backend/public/assets/css/style.css
+++ b/backend/public/assets/css/style.css
@@ -18,25 +18,29 @@ ul {
 }
 
 .w-200px {
-  max-width: 200px;
+  width: 200px;
 }
 
 .w-300px {
-  max-width: 300px;
+  width: 300px;
 }
 
 .w-600px {
-  max-width: 600px;
+  width: 600px;
+}
+
+.w-700px {
+  width: 800px;
 }
 
 .h-100px {
-  max-height: 100px;
+  height: 100px;
 }
 
 .h-200px {
-  max-height: 200px;
+  height: 200px;
 }
 
 .h-400px {
-  max-height: 400px;
+  height: 400px;
 }
